--- a/piedra-papel-tijera-lagarto-spock/css/style.css
+++ b/piedra-papel-tijera-lagarto-spock/css/style.css
@@ -6,13 +6,8 @@ body{
 }
 
 #player{
-	float: left;
-	width: 40%;
-}
-
-#javascript{
-	float: right;
-	width: 40%;
+	text-align: center;
+	width: 100%;
 }
 article img{
 	cursor: pointer;
